Add resume page and update documentation structure
- Introduced a new resume page detailing professional experience and qualifications.
- Updated mkdocs.yml to include the new resume section in the navigation.
- Added new dependencies (pillow, cairosvg) to requirements-doc.txt for document processing capabilities.
- Enhanced services.md with a description of proven consulting results and expanded technical capabilities.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -123,6 +123,7 @@ nav:
     - Consulting Services: "services.md"
     - Jump on a Call: "expert-calls.md"
     - Experts and Vendors: "experts-and-vendors.md"
+  - Resume: "resume.md"
   - Job Board: "https://jobs.applied-llms.org"
   - Writing:
     - "writing/index.md"
